# meddly

./: .editorconfig  .gitignore  AUTHORS  Changes.txt  Config_debug  Config_optimized  FEATURES  Makefile.am  README  Release  TODO  TODO.txt  autogen.sh  changes.html  configure.ac  configure~  history.html
developers/: .gitignore  Changes.txt  Config_Linux_debug.sh  Config_Linux_debug_strict.sh  Config_Linux_optimized.sh  Config_Mac_debug.sh  Config_Mac_debug_strict.sh  Config_Mac_fast.sh  Config_Mac_optimized.sh  Config_generic.sh  GenTable.sh  GenerateTable  GetAllVersions.sh  Makefile  README.txt  Release.sh  RunBench.sh  RunBenchmarks  RunSatur.sh  RunTests  RunTests.sh  RunTiming.sh  RunTradSS.sh  TODO.txt  branching.txt  checkInstall.sh  documentation.txt  nqueens.cc  release.txt
docs/: .gitignore  BuildDoxyFile  Doxyfile  Doxyfile.skel  Gemfile  Makefile  _config.yml  all_releases.md  index.md  old_releases.md
docs-devel/: Doxyfile.skel
docs/_basics/: 00_features.md  01_publications.md  02_downloading.md  03_building.md  101_example.md
docs/_data/: navigation.yml
docs/_includes/: footer.html  mathjax.html  post_pagination.html
docs/_layouts/: singdate.html
docs/_oldreleases/: 0.10.456.md  0.11.486.md  0.12.625.md  0.13.685.md  0.14.818.md  0.15.0.md  0.15.1.md  0.4.174.md  0.5.186.md  0.6.233.md  (+2 more)
doxy/: Doxyfile.skel
doxy-devel/: Doxyfile.skel
doxygen/: BuildDoxyFile  Doxyfile.skel  Makefile
doxygen-devel/: Doxyfile.skel
examples/: .gitignore  File  Makefile.am  TODO.txt  applyinfo.cc  build_expression.cc  dd_info.cc  diff_dd.cc  dining_phils.cc  dining_phils_evmdd.cc  ga.cc  graphs_to_mdds.cc  hanoi.cc  kan1_batch.cc  kanban.cc  knight.cc  knight2.cc  libinfo.cc  life.cc  mr2dist.cc  nqueens.cc  qc2.cc  queen_cover.cc  rebuild_mdd.cc  rubiks_cube.cc  rubiks_cube_evmdd.cc  rubiks_cube_orderings.cc  rubiks_cube_orient.cc  rubiks_cube_phase.cc  rubiks_rings.cc  simple_model.cc  simple_model.h  slot.cc  slot_phase.cc  square1.cc  swaps.cc  test_aboveCount_mdd.cc  test_evmdd.cc  test_evmdd_union_min.cc  test_highestUnique.cc  (+25 more)
examples/OLD/: build_expression.cc  dining_phils_evmdd.cc  ga.cc  kan1_batch.cc  rubiks_cube_phase.cc  test_reorder_mtmxd.cc  test_union_mdd.cc
examples/Rubiks/: rubiks_cube.cc  rubiks_rings.cc
include/: README  mddexpert.h  mddlib.h  meddly.h  meddly_expert.h
manual/: InterfaceDoc.tex
src/: .gitignore  BuildRevNo  Makefile.am  arrays.cc  arrays.h  chained_hash.h  compute_cache.cc  compute_cache.h  compute_manager.cc  compute_table.cc  compute_table.h  ct_entry_key.cc  ct_entry_key.h  ct_entry_result.cc  ct_entry_result.h  ct_entry_type.cc  ct_entry_type.h  ct_generics.cc  ct_generics.h  ct_initializer.cc  ct_initializer.h  ct_vector.cc  ct_vector.h  dd_edge.cc  dd_edge.h  defines.h  domain.cc  domain.h  edge_value.cc  edge_value.h  encoders.cc  encoders.h  enumerator.cc  enumerator.h  error.cc  error.h  fixed_size_hash.h  forest.cc  forest.h  forest_edgerules.h  (+120 more)
src/.OLD/: arith.h  best.h  ct_classic.h  maxmin.cc  modulo.cc  pattern.cc  pattern.h  reach_bfs.h  relforest.cc
src/OLD/: compact.cc  mpz_object.cc
src/forests/: Makefile.am  cbdd.cc  cbdd.h  czdd.cc  czdd.h  esrbdd.cc  esrbdd.h  ev.cc  ev.h  evmdd.cc  evmdd.h  evmdd_plusint.cc  evmdd_plusint.h  evmdd_pluslong.cc  evmdd_pluslong.h  evmdd_timesreal.cc  evmdd_timesreal.h  evmddold.cc  evmddold.h  evmxd.cc  evmxd.h  evmxd_pluslong.cc  evmxd_pluslong.h  evmxd_timesreal.cc  evmxd_timesreal.h  hash_stream.h  init_forests.cc  init_forests.h  mdds.cc  mdds.h  mdds_ext.cc  mdds_ext.h  mt.cc  mt.h  mtmdd.cc  mtmdd.h  mtmddbool.cc  mtmddbool.h  mtmddint.cc  mtmddint.h  (+12 more)
src/memory_managers/: array_grid.cc  array_grid.h  base_manager.cc  freelists.cc  freelists.h  heap_manager.cc  heap_manager.h  hole_base.h  init_managers.cc  init_managers.h  malloc_style.cc  malloc_style.h  orig_grid.cc  orig_grid.h
src/operations/: Makefile.am  above_count.cc  above_count.h  apply_base.cc  apply_base.h  arith.cc  arith_distmin.cc  arith_distmin.h  arith_div.cc  arith_div.h  arith_max.cc  arith_max.h  arith_min.cc  arith_min.h  arith_minus.cc  arith_minus.h  arith_mod.cc  arith_mod.h  arith_mult.cc  arith_mult.h  arith_plus.cc  arith_plus.h  arith_templ.h  base_mtmdd.h  below_count.cc  below_count.h  cardinality.cc  cardinality.h  comp_eq.cc  comp_eq.h  comp_ge.cc  comp_ge.h  comp_gt.cc  comp_gt.h  comp_le.cc  comp_le.h  comp_lt.cc  comp_lt.h  comp_ne.cc  comp_ne.h  (+122 more)
src/reordering/: LARC_reordering.h  Makefile.am  bring_up_reordering.h  bubble_up_reordering.h  highest_inversion_reordering.h  larc_reordering.h  lowest_cost_reordering.h  lowest_inversion_reordering.h  lowest_memory_reordering.h  random_reordering.h  reordering_base.h  reordering_factory.h  reordering_type.h  sink_down_reordering.h
src/storage/: Makefile.am  best.cc  best.h  bytepack.h  compact.cc  compact.h  ct_classic.cc  ct_classic.h  ct_none.h  ct_old.h  ct_styles.cc  ct_styles.h  ct_typebased.h  ct_typebased.new.h  heap.h  hm_array.cc  hm_array.h  hm_grid.cc  hm_grid.h  hm_heap.cc  hm_heap.h  hm_none.cc  hm_none.h  holeman.cc  holeman.h  init_storage.cc  init_storage.h  old_scheme.cc  old_scheme.h  pattern.cc  pattern.h  realtest.cc  simple.cc  simple.h
tests/: .gitignore  Makefile.am  a.out  bug_00.cc  bug_01.cc  bug_02.cc  bug_03.cc  buildWrapper.sh  check_xA.cc  chk_copy.cc  chk_cross.cc  chk_ct.cc  chk_ct_old.cc  chk_evtimes_float  chk_evtimes_float.cc  chk_iters.cc  chk_minterms.cc  chk_minterms_old.cc  chk_mtcoll.cc  chk_reorder.cc  ddedge.cc  domain_list.cc  enctest.cc  foo.cc  heaptest.cc  kan_batch.cc  kan_bwd_df1.h  kan_bwd_df2.h  kan_bwd_df3.h  kan_chkrs.cc  kan_df1.h  kan_df2.h  kan_df3.h  kan_dist1.h  kan_fwd_df1.h  kan_fwd_df2.h  kan_fwd_df3.h  kan_index.cc  kan_io.cc  kan_relprod.cc  (+31 more)
timing/: .gitignore  Makefile.am  comptab.cc  ddedge.cc  fids.cc  mark.cc  opids.cc  park_random.h  reduce.cc  reporting.cc  reporting.h  simple_model.cc  simple_model.h  timer.h  unpacked.cc
www/: Publish  build.html  features.html  history.html  index.html  meddly.css  obtain.html  papers.html  print.css
(+57 files in other folders)
