
## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

## bin_PROGRAMS = \
noinst_PROGRAMS = \
applyinfo \
dining_phils \
graphs_to_mdds \
hanoi \
kanban \
knight \
knight2 \
libinfo \
life \
nqueens \
queen_cover \
qc2 \
slot \
swaps \
rebuild_mdd \
test_otf_sat \
test_memory \
test_implicit_kanban \
test_implicit_pool \
test_implicit_smallos \
test_sccs \
tiles


# test_user_operation

AM_CXXFLAGS = -Wall

applyinfo_SOURCES = applyinfo.cc
applyinfo_LDADD = ../src/libmeddly.la

dining_phils_SOURCES = dining_phils.cc
dining_phils_LDADD = ../src/libmeddly.la

graphs_to_mdds_SOURCES = graphs_to_mdds.cc
graphs_to_mdds_LDADD = ../src/libmeddly.la

hanoi_SOURCES = hanoi.cc simple_model.h simple_model.cc
hanoi_LDADD = ../src/libmeddly.la

kanban_SOURCES = kanban.cc simple_model.h simple_model.cc
kanban_LDADD = ../src/libmeddly.la

knight_SOURCES = knight.cc
knight_LDADD = ../src/libmeddly.la

knight2_SOURCES = knight2.cc
knight2_LDADD = ../src/libmeddly.la

libinfo_SOURCES = libinfo.cc
libinfo_LDADD = ../src/libmeddly.la

life_SOURCES = life.cc
life_LDADD = ../src/libmeddly.la



nqueens_SOURCES = nqueens.cc
nqueens_LDADD = ../src/libmeddly.la

queen_cover_SOURCES = queen_cover.cc
queen_cover_LDADD = ../src/libmeddly.la

qc2_SOURCES = qc2.cc
qc2_LDADD = ../src/libmeddly.la


slot_SOURCES = slot.cc simple_model.h simple_model.cc
slot_LDADD = ../src/libmeddly.la

swaps_SOURCES = swaps.cc
swaps_LDADD = ../src/libmeddly.la

rebuild_mdd_SOURCES = rebuild_mdd.cc reorder.h
rebuild_mdd_LDADD = ../src/libmeddly.la

test_implicit_kanban_SOURCES = test_implicit_kanban.cc simple_model.h simple_model.cc
test_implicit_kanban_LDADD = ../src/libmeddly.la

test_implicit_pool_SOURCES = test_implicit_pool.cc simple_model.h simple_model.cc
test_implicit_pool_LDADD = ../src/libmeddly.la

test_implicit_smallos_SOURCES = test_implicit_smallos.cc simple_model.h simple_model.cc
test_implicit_smallos_LDADD = ../src/libmeddly.la

# test_user_operation_SOURCES = test_user_operation.cc
# test_user_operation_LDADD = ../src/libmeddly.la

test_memory_SOURCES = test_memory.cc
test_memory_LDADD = ../src/libmeddly.la

test_sccs_SOURCES = test_sccs.cc
test_sccs_LDADD = ../src/libmeddly.la

test_otf_sat_SOURCES = test_otf_sat.cc
test_otf_sat_LDADD = ../src/libmeddly.la

tiles_SOURCES = tiles.cc simple_model.h simple_model.cc
tiles_LDADD = ../src/libmeddly.la

